--- a/Anchor.toml
+++ b/Anchor.toml
@@ -4,7 +4,7 @@ no-log-ix = []
 cpi = true
 
 [programs.localnet]
-complifi = "Fg6PaFpoGXkYsidMpWTK6W2BeZ7FEfcYkg476zPFsLnS"
+complifi = "JE1YTqS1Z6MR5y7oxVnS6TpnRHTPDcJQg87TzByu5jCk"
 
 [registry]
 url = "https://api.apr.dev"
@@ -14,19 +14,20 @@ cluster = "Localnet"
 wallet = "~/.config/solana/id.json"
 
 [scripts]
-test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
+# Limit to our actual test file to avoid picking up .d.ts
+ test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/complifi.ts"
 
 [test]
 startup_wait = 10000
 
 [workspace]
 members = [
-    "programs/*"
+	"programs/*"
 ]
 
 [build]
-version = "0.29.0"
+version = "0.32.1"
 
 [toolchain]
-anchor_version = "0.29.0"
+anchor_version = "0.32.1"
 
