--- a/programs/complifi/Cargo.toml
+++ b/programs/complifi/Cargo.toml
@@ -14,9 +14,9 @@ no-entrypoint = []
 no-idl = []
 no-log-ix = []
 cpi = ["no-entrypoint"]
+idl-build = ["anchor-lang/idl-build"]
 default = []
 
 [dependencies]
-anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
-anchor-spl = "0.29.0"
+anchor-lang = { version = "0.32.1", features = ["idl-build", "init-if-needed"] }
 
