--- a/programs/complifi/Cargo.toml
+++ b/programs/complifi/Cargo.toml
@@ -18,5 +18,5 @@ idl-build = ["anchor-lang/idl-build"]
 default = []
 
 [dependencies]
-anchor-lang = { version = "0.32.1", features = ["idl-build", "init-if-needed"] }
+anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
 
